--- a/vegetable_prices/notebook.ipynb
+++ b/vegetable_prices/notebook.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "data = vegetable_prices\n",
     "#test dataset for established connection\n",
-    "data.head()"
+    "data.head()\n"
    ]
   },
   {
