--- a/vegetable_prices/notebook.ipynb
+++ b/vegetable_prices/notebook.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4    22      6          35.0                    25  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -286,9 +286,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bhindi (Ladies finger)</th>\n",
+       "      <th>Tomato</th>\n",
+       "      <th>Onion</th>\n",
+       "      <th>Potato</th>\n",
+       "      <th>Brinjal</th>\n",
+       "      <th>Garlic</th>\n",
+       "      <th>Peas</th>\n",
+       "      <th>Methi</th>\n",
+       "      <th>Green Chilli</th>\n",
+       "      <th>Elephant Yam (Suran)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>quarter</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023Q1</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q1</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q1</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q2</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q4</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q4</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q4</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q4</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024Q1</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>287 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Bhindi (Ladies finger)  Tomato  Onion  Potato  Brinjal  Garlic  Peas  \\\n",
+       "quarter                                                                         \n",
+       "2023Q1                     35.0    18.0   22.0    20.0     30.0    50.0  25.0   \n",
+       "2023Q1                     35.0    16.0   22.0    20.0     30.0    55.0  25.0   \n",
+       "2023Q1                     35.0    16.0   21.0    20.0     30.0    55.0  25.0   \n",
+       "2023Q2                     30.0    16.0   21.0    22.0     25.0    55.0  25.0   \n",
+       "2023Q3                     35.0    16.0   20.0    21.0     25.0    55.0  22.0   \n",
+       "...                         ...     ...    ...     ...      ...     ...   ...   \n",
+       "2023Q4                     45.0    16.0   30.0    20.0     70.0   260.0  40.0   \n",
+       "2023Q4                     45.0    16.0   30.0    20.0     70.0   260.0  30.0   \n",
+       "2023Q4                     45.0    16.0   30.0    22.0     80.0   260.0  30.0   \n",
+       "2023Q4                     45.0    16.0   26.0    20.0     60.0   250.0  40.0   \n",
+       "2024Q1                     45.0    16.0    9.0    18.0     50.0   260.0  40.0   \n",
+       "\n",
+       "         Methi  Green Chilli  Elephant Yam (Suran)  \n",
+       "quarter                                             \n",
+       "2023Q1     8.0          45.0                  25.0  \n",
+       "2023Q1     7.0          40.0                  25.0  \n",
+       "2023Q1     7.0          40.0                  25.0  \n",
+       "2023Q2     7.0          40.0                  25.0  \n",
+       "2023Q3     6.0          35.0                  25.0  \n",
+       "...        ...           ...                   ...  \n",
+       "2023Q4    16.0          40.0                  25.0  \n",
+       "2023Q4    20.0          45.0                  25.0  \n",
+       "2023Q4    18.0          50.0                  25.0  \n",
+       "2023Q4    16.0          50.0                  40.0  \n",
+       "2024Q1    15.0          60.0                  25.0  \n",
+       "\n",
+       "[287 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#convert datatype of date column: \n",
     "vegetable_prices['Price Dates'] = pd.to_datetime(vegetable_prices['Price Dates'],format='mixed')\n",
@@ -298,7 +530,8 @@
     "\n",
     "#Drop date column as it will not be needed in the dataframe:\n",
     "quarter_preformance=vegetable_prices.drop('Price Dates',axis=1)\n",
-    "\n"
+    "\n",
+    "quarter_preformance.set_index('quarter')"
    ]
   },
   {
@@ -521,14 +754,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1805/2925232391.py:8: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_1784/2925232391.py:8: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  quarter_common_price = quarter_preformance.groupby('quarter').apply(quarter_common_price_method).set_index('quarter')\n"
      ]
     }
@@ -547,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +917,7 @@
        "2024Q1   40.00  15.00         60.00                 25.00  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,16 +1078,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the Average and the Median we can confirm the positioning of the spread for the price through out the quarters.\n",
+    "**Using the Average and the Median we can confirm the valuation of the vegetables throughout the quarters:**\n",
     "\n",
-    "1) Clearly tomato price haven't had much variance in price over the last 4 quarters.\n",
-    "2) The price of Brinjal ,Garlic and Peas was over valued in some regions, causing the average price to be greater than the median price.\n",
-    "3) the 2024 Quarter shows no change meaning the data set is most probably composed of 1-2 months, we can ignore them."
+    "1) Clearly tomato prices haven't had much variance in price over the last 4 quarters, *indicating a stagnation in their economy*.\n",
+    "2) The price of Brinjal ,Garlic and Peas was over valued in some regions. We see this by observing if the average price is greater than the median price.\n",
+    "\n",
+    "**Using the Time frame as analysis:**\n",
+    "\n",
+    "1) we can see that onions and peas had a massive increase in demand in the third and fourth quarter of the year,\n",
+    "3) The 2024 Quarter shows no change meaning the data set is most probably composed of 1-2 months, we can ignore them.\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1259,7 @@
        "2024Q1    40.0   15.0          60.0                  25.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1434,7 @@
        "2024Q1    15.0         60.00                  25.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1589,7 @@
        "2024Q1    40.0    15.0          60.0                  25.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1744,7 @@
        "2024Q1     NaN     NaN           NaN                   NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,22 +1757,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4 Visual illustration (bar graph) to visualize the data:**"
+    "Using the standard deviation we can determine the quantity of change from the average price,\n",
+    "using this we can conclude that a high variance means a large change from the average price.\n",
+    "\n",
+    "Meaning:\n",
+    "1) Garlic has had a constantly growing variance in price through out the year\n",
+    "2) Methi had a surging increase in price in the 4th quarter, *this may be due to the abnormal max value*\n",
+    "3) Bhindi, Onion, Brinjal Garlic Pea prices had a near 70% increase."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we will plot a line graph showing the differences in prices between lines."
+    "**4 Visual illustration to visualize the data:**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1545,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1611,6 +1848,18 @@
     "plt.xticks(rotation=45, ha=\"right\")  # Rotate x-axis labels\n",
     "plt.legend(title='Quarter')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Having Gatherd all the finding we have we can make the following hypotheses regarding the current vegetable prices:\n",
+    "\n",
+    "1) Tomatos have kept a constant price meaing the demand never exceeded the supply and since they are grown globally in warm and sunny environments.\n",
+    "they can be planted in abundance.\n",
+    "2) Garlic, has had a rapid incline in prices, this may be due to exportation issues from its majour exporters Argentina and Spain in the period of 2023.\n",
+    "3) Peas had a major surge in the third quarter in the year 2023, "
    ]
   }
  ],
